tests/rosetta/out/Smalltalk/anagrams-deranged-anagrams.out
/workspace/mochi/tests/rosetta/out/Smalltalk/anagrams-deranged-anagrams.st:49: parse error, expected '|' or identifier
